--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -1,1 +1,7 @@
-<p>admin-layout works!</p>
+<app-header></app-header>
+
+<div class="container-fluid">
+  <router-outlet></router-outlet>
+</div>
+
+<app-footer></app-footer>
