--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -1,7 +1,30 @@
-<app-header></app-header>
+<!-- <app-header></app-header>
+<app-sidebar></app-sidebar>
 
-<div class="container-fluid">
+<main class="app-main">
   <router-outlet></router-outlet>
-</div>
+</main>
 
-<app-footer></app-footer>
+<app-footer></app-footer> -->
+
+
+<div class="app-wrapper">
+
+  <app-header></app-header>
+
+  <!-- SIDEBAR -->
+  <aside class="app-sidebar bg-body-secondary shadow" data-bs-theme="dark">
+    <app-sidebar></app-sidebar>
+  </aside>
+
+  <!-- MAIN -->
+  <main class="app-main">
+    <router-outlet></router-outlet>
+  </main>
+
+  <!-- FOOTER -->
+  <footer class="app-footer">
+    <app-footer></app-footer>
+  </footer>
+
+</div>
