--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,27 @@
-/* You can add global styles to this file, and also import other style files */
+/* Header should start after sidebar */
+.app-header {
+  position: fixed;
+  top: 0;
+  left: 250px;          /* sidebar width */
+  right: 0;
+  height: 56px;
+  z-index: 1038;
+}
+
+/* Main content offset */
+.app-main {
+  margin-left: 250px;
+  margin-top: 56px;
+}
+
+/* Footer offset */
+.app-footer {
+  margin-left: 250px;
+}
+@media (max-width: 991px) {
+  .app-header,
+  .app-main,
+  .app-footer {
+    margin-left: 0;
+  }
+}
