--- a/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.html
@@ -1,1 +1,15 @@
-<p>auth-layout works!</p>
+<div class="app-wrapper no-sidebar-layout">
+
+  <app-header></app-header>
+
+  <!-- MAIN -->
+  <main class="app-main">
+    <router-outlet></router-outlet>
+  </main>
+
+  <!-- FOOTER -->
+  <footer class="app-footer">
+    <app-footer></app-footer>
+  </footer>
+
+</div>
