--- a/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.html
@@ -1,6 +1,6 @@
 <div class="app-wrapper no-sidebar-layout">
 
-  <app-header></app-header>
+  <app-homeheader></app-homeheader>
 
   <!-- MAIN -->
   <main class="app-main">
