--- a/src/app/shared/footer/footer/footer.component.html
+++ b/src/app/shared/footer/footer/footer.component.html
@@ -1,10 +1,22 @@
-
-    <!--begin::To the end-->
-    <div class="float-end d-none d-sm-inline">Anything you want</div>
-    <!--end::To the end-->
-    <!--begin::Copyright-->
-    <strong>
-        Copyright &copy; 2014-2025&nbsp;
-        <a href="https://adminlte.io" class="text-decoration-none">AdminLTE.io</a>.
-    </strong>
-    All rights reserved.
+<footer class="nic-footer">
+     <img
+    src="assets/images/nic-footer-logo.png"
+    alt="NIC Footer"
+    class="ccms-footer-img"
+  />
+  <div class="container-fluid text-center">
+    <span class="footer-text">
+      <strong class="highlight">
+        Developed and hosted by:
+      </strong>
+      National Informatics Centre, Ministry of Electronics & Information Technology, Government of India.
+      <br />
+      <strong class="highlight">
+        Disclaimer:
+      </strong>
+      Content and data owned by respective Service Provider Departments, Chandigarh Administration.
+      <br />
+      © Law & Prosecution Department, Chandigarh Administration.
+    </span>
+  </div>
+</footer>
