--- a/src/app/shared/header/homeheader/homeheader.component.html
+++ b/src/app/shared/header/homeheader/homeheader.component.html
@@ -1,76 +1,49 @@
 <nav class="app-header navbar navbar-expand bg-body">
     <div class="container-fluid">
-
         <a href="#" class="navbar-brand d-flex align-items-center">
             <img src="assets/images/site_loginlogo.png" alt="CCMS Logo" class="header-logo" />
         </a>
-
-        <span class="header-title d-none d-md-inline">
-
-        </span>
-
-
+        <span class="header-title d-none d-md-inline"> </span>
         <div class="header-title d-none d-md-inline">
             <h2> Court Cases Monitoring System </h2>
         </div>
-
         <ul class="navbar-nav ms-auto">
             <li class="nav-item">
                 <div class="d-flex align-items-center gap-2">
-
-                    <!-- State Select -->
                     <select class="form-select state-select">
                         <option selected>Select State</option>
                         <option>Chandigarh</option>
                         <option>Punjab</option>
                         <option>Haryana</option>
                     </select>
-
-                    <!-- Login Button -->
                     <button class="btn btn-login" (click)="openLogin(content)">
                         <i class="fa fa-sign-in mr-2" aria-hidden="true"></i>Login
                     </button>
-
                 </div>
             </li>
         </ul>
-
-
     </div>
-
 </nav>
-<!-- Login Modal -->
 <ng-template #content let-modal>
-    <!-- MODAL HEADER -->
     <div class="modal-header p-0">
         <div class="login-header d-flex align-items-center w-100">
 
             <div class="login-tab" [class.active]="loginType === 'user'" (click)="loginType = 'user'">
                 Login with User ID
             </div>
-
             <div class="login-tab" [class.active]="loginType === 'mobile'"
                 (click)="loginType = 'mobile'; isOtpTextVisible = false;">Login with mobile no</div>
-
             <button type="button" class="btn-close ms-auto me-2" (click)="modal.dismiss()">
             </button>
         </div>
     </div>
-
-    <!-- MODAL BODY -->
     <div class="modal-body">
-
-        <!-- LOGO -->
         <div class="text-center mb-3">
             <img src="assets/images/site_loginlogo.png" height="70" />
         </div>
-
-        <!-- MOBILE LOGIN -->
         <div *ngIf="loginType === 'mobile'">
             <div *ngIf="!isOtpTextVisible">
-
                 <input type="text" class="form-control mb-3" placeholder="Enter Mobile Number" />
-
                 <div class="d-flex gap-2 mb-3">
                     <input type="text" class="form-control" placeholder="Enter Captcha" [(ngModel)]="captch_input"
                         maxlength="10">
@@ -101,18 +74,14 @@
                     <input type="password" class="form-control otp-input" [(ngModel)]="otp6" maxlength="1"
                         (keydown)="moveFocus($event, null, otp5Input)" #otp6Input />
                 </div>
-
-                <!-- Action Buttons -->
                 <div class="d-flex justify-content-center">
                     <button class="btn btn-primary text-white mx-1" *ngIf="isOtpReSendButton">Resend OTP</button>
-                    <button class="btn btn-success text-white mx-1" (click)="verfiyOTPUser()" *ngIf="isOtpVerfiy">Verify
-                        OTP</button>
+                    <button class="btn btn-success text-white mx-1" (click)="verfiyOTPUser()" *ngIf="isOtpVerfiy">Verify OTP</button>
 
                 </div>
             </div>
         </div>
 
-        <!-- USER ID LOGIN -->
         <div *ngIf="loginType === 'user'">
             <input type="text" class="form-control mb-3" placeholder="Enter User ID" />
             <input type="password" class="form-control mb-3" placeholder="Enter Password" />
@@ -129,13 +98,6 @@
             <button class="btn btn-primary w-100">
                 Login
             </button>
-
-
         </div>
-
-
-
-
     </div>
 </ng-template>
-<!-- End of Login Modal -->
