--- a/src/app/shared/footer/footer/footer.component.html
+++ b/src/app/shared/footer/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="nic-footer">
+<!-- <footer class="nic-footer">
      <img
     src="assets/images/nic-footer-logo.png"
     alt="NIC Footer"
@@ -18,5 +18,38 @@
       <br />
       © Law & Prosecution Department, Chandigarh Administration.
     </span>
+  </div>
+</footer> -->
+<footer class="nic-footer">
+  <div class="container-fluid footer-container">
+    
+    <div class="footer-left">
+      <img
+        src="assets/images/nic-footer-logo.png"
+        alt="NIC Footer"
+        class="footer-logo"
+      />
+
+      <div class="footer-text">
+        <p>
+          <strong>Developed and hosted by:</strong>
+          National Informatics Centre, Ministry of Electronics & IT, Government of India.
+        </p>
+        <p>
+          <strong>Disclaimer:</strong>
+          Content and data owned by respective Service Provider Departments, Chandigarh Administration.
+        </p>
+        <p class="copyright">
+          © Law & Prosecution Department, Chandigarh Administration.
+        </p>
+      </div>
+    </div>
+
+    <div class="footer-right">
+      <a href="/privacy-policy">Privacy Policy</a>
+      <span>|</span>
+      <a href="/support">Support</a>
+    </div>
+
   </div>
 </footer>
